--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,13 +28,32 @@ a {
   color: white; }
 
 /* objects
+
 */
-header {
+.o-flex {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  margin-top: 15px; }
+
+.o-flex__item {
+  width: 95%;
+  border-radius: 15px; }
+
+.o-flex__header {
   background-color: rgba(0, 0, 0, 0.5);
   color: white;
   font-family: "Staatliches", cursive;
   text-align: center; }
 
+/*header{
+    background-color: $black;
+    color: $white;
+    font-family: $titleFontFamily;
+    text-align: center;
+}
+*/
 /* Components
 */
 
